environment-bootstrap/aws/terraform/internet_gateway.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = "${aws_vpc.vpc.id}"
  depends_on = ["aws_vpc.vpc"]
}
